XMLExper/m12/m12_128_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLNode* tinyxml2::XMLNode::DeepClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:884:74: error: cannot dynamic_cast ‘child’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDocument*’ (conversion casts away constness)
  884 |   XMLNode* childClone = /*PCI*/dynamic_cast<tinyxml2::XMLDocument*>(child)->DeepClone(target);
      |                                                                          ^
diff: tinyxml2.S: No such file or directory
